# IteratorTools

./: CMakeLists.txt  Iterators.hpp  LICENSE  README.md  main.cpp
.github/workflows/: Doxyfile  docs.yaml  unit_tests.yml
Test/: CMakeLists.txt  CounterIterator.cpp  Iterators.cpp  MustNotCopy.cpp  MustNotCopy.hpp  TransformIterators.cpp  ZipIterators.cpp  utils.cpp  utils.hpp
html/: Iterators_8hpp.html  Iterators_8hpp__incl.map  Iterators_8hpp__incl.md5  Iterators_8hpp_source.html  README_8md_source.html  annotated.html  classes.html  classiterators_1_1impl_1_1ZipIterator-members.html  classiterators_1_1impl_1_1ZipIterator.html  classiterators_1_1impl_1_1ZipIterator__coll__graph.md5  classiterators_1_1impl_1_1ZipIterator__inherit__graph.map  files.html  functions.html  functions_func.html  functions_rela.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_4.map  inherit_graph_4.md5  inherit_graph_5.map  inherit_graph_5.md5  inherits.html  menudata.js  namespaceiterators.html  namespaceiterators_1_1impl.html  namespaceiterators_1_1impl_1_1traits.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  structiterators_1_1impl_1_1CounterIterator-members.html  structiterators_1_1impl_1_1CounterIterator.html  (+11 more)
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  (+15 more)
include/: Iterators.hpp
latex/: Iterators_8hpp.tex  Iterators_8hpp__incl.md5  annotated.tex  classiterators_1_1impl_1_1ZipIterator.tex  classiterators_1_1impl_1_1ZipIterator__coll__graph.md5  files.tex  hierarchy.tex  index.tex  namespaceiterators.tex  namespaceiterators_1_1impl.tex  namespaceiterators_1_1impl_1_1traits.tex  namespaces.tex  refman.tex  structiterators_1_1impl_1_1CounterIterator.tex  structiterators_1_1impl_1_1CounterIterator__inherit__graph.md5  structiterators_1_1impl_1_1CounterRange.tex  structiterators_1_1impl_1_1SynthesizedOperators.tex  structiterators_1_1impl_1_1SynthesizedOperators__inherit__graph.md5  structiterators_1_1impl_1_1Unreachable.tex  structiterators_1_1impl_1_1ZipView.tex
