project(Tests)

enable_testing()
find_package(GTest)
if (GTest_FOUND)
    add_executable(${PROJECT_NAME} main.cpp Iterators.cpp utils.cpp)
    target_include_directories(${PROJECT_NAME} PRIVATE ${GTEST_INCLUDE_DIR} ${CMAKE_SOURCE_DIR})
    target_link_libraries(${PROJECT_NAME} ${LIBS} gmock gtest pthread)
    add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
else()
    message(WARNING "Failed to locate GTest. You won't be able to run the tests.")
endif()