project(Tests)

enable_testing()
find_package(GTest)
if (GTest_FOUND)
    add_executable(${PROJECT_NAME} main.cpp Iterators.cpp utils.cpp CounterIterator.cpp)
    target_link_libraries(${PROJECT_NAME} ${LIBS} gmock gtest pthread IteratorTools)
    add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
else()
    message(WARNING "Failed to locate GTest. You won't be able to run the tests.")
endif()